--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -235,7 +235,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-10-07 15:58:51
+// updated on 2016-10-19 19:00:49
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -274,6 +274,7 @@ DOMAIN-SUFFIX,financetwitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,findmima.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flipboard.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flitto.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,funkyimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fxnetworks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gettyimages.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getuploader.com,Proxy,force-remote-dns
@@ -293,6 +294,7 @@ DOMAIN-SUFFIX,secure.hustler.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hustlercash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.hustlercash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hybrid-analysis.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,i-scmp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ilovelongtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imgmega.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imgur.com,Proxy,force-remote-dns
@@ -608,6 +610,7 @@ DOMAIN-SUFFIX,google.am,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.cat,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.cd,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.ci,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.co.id,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.co.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.co.ma,Proxy,force-remote-dns
@@ -663,6 +666,7 @@ DOMAIN-SUFFIX,groups.google.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gvt0.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gvt3.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gwtproject.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,html5rocks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iam.soy,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igoogle.com,Proxy,force-remote-dns
@@ -844,6 +848,7 @@ DOMAIN-SUFFIX,aliengu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alkasir.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allconnected.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alldrawnsex.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,allfinegirls.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allgirlsallowed.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alliance.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allinfa.com,Proxy,force-remote-dns
@@ -921,14 +926,16 @@ DOMAIN-SUFFIX,arlingtoncemetery.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,army.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,arstechnica.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,art4tibet1998.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,artofpeacefoundation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,artsy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asacp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asahichinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asdfg.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asg.to,Proxy,force-remote-dns
-DOMAIN-SUFFIX,japanfirst.asianfreeforum.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,asia-gaming.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asiaharvest.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianews.it,Proxy,force-remote-dns
+DOMAIN-SUFFIX,japanfirst.asianfreeforum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asiansexdiary.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianwomensfilm.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asiatgp.com,Proxy,force-remote-dns
@@ -968,8 +975,10 @@ DOMAIN-SUFFIX,2.bahamut.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,baidu.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bailandaily.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,baixing.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bakgeekhome.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,banana-vpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bandwagonhost.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bangbrosnetwork.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bangchen.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bangyoulater.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bannedbook.org,Proxy,force-remote-dns
@@ -1009,6 +1018,7 @@ DOMAIN-SUFFIX,behindkink.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beijing1989.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beijingspring.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,belamionline.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bell.wiki,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bemywife.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beric.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,berlintwitterwall.com,Proxy,force-remote-dns
@@ -1056,6 +1066,7 @@ DOMAIN-SUFFIX,blinw.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blip.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blockcn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,blog.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogcatalog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogcity.me,Proxy,force-remote-dns
@@ -1191,6 +1202,7 @@ DOMAIN-SUFFIX,cattt.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cbc.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cbsnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cbtc.org.hk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cccat.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ccdtr.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cchere.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ccim.org,Proxy,force-remote-dns
@@ -1465,6 +1477,7 @@ DOMAIN-SUFFIX,danwei.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,daolan.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,darktoy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dastrassi.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,blog.daum.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,david-kilgour.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,daxa.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.dayabook.com,Proxy,force-remote-dns
@@ -1557,6 +1570,7 @@ DOMAIN-SUFFIX,dtiblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtic.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtiserv2.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtwang.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,duanzhihu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duckdns.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duckduckgo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duckload.com,Proxy,force-remote-dns
@@ -1735,6 +1749,7 @@ DOMAIN-SUFFIX,fangong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangongheike.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanqiang.tk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanqianghou.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fanqiangzhe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fapdu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,faproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fawanghuihui.org,Proxy,force-remote-dns
@@ -1822,6 +1837,7 @@ DOMAIN-SUFFIX,fofg.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fofg-europe.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fooooo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,footwiball.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fotile.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fourthinternational.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,foxdie.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,foxsub.com,Proxy,force-remote-dns
@@ -1845,7 +1861,6 @@ DOMAIN-SUFFIX,freealim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whitebear.freebearblog.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freebrowser.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freechal.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,freecn.top,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomchina.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomhouse.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freedomsherald.org,Proxy,force-remote-dns
@@ -1990,7 +2005,8 @@ DOMAIN-SUFFIX,girlbanker.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,git.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,softwaredownload.gitbooks.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gist.github.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,github.io,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cthlo.github.io,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wsgzao.github.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gizlen.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gjczz.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,glennhilton.com,Proxy,force-remote-dns
@@ -2018,6 +2034,7 @@ DOMAIN-SUFFIX,godsdirectcontact.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,godsdirectcontact.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,godsdirectcontact.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,godsimmediatecontact.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gogotunnel.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gohappy.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gokbayrak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,goldbet.com,Proxy,force-remote-dns
@@ -2350,6 +2367,7 @@ DOMAIN-SUFFIX,ilove80.be,Proxy,force-remote-dns
 DOMAIN-SUFFIX,im.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,im88.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imgchili.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,imageab.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imagefap.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imageflea.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imageshack.us,Proxy,force-remote-dns
@@ -2500,6 +2518,7 @@ DOMAIN-SUFFIX,jobso.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,joeedelman.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,journalchretien.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,journalofdemocracy.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,joymiihub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jpopforum.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,juhuaren.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,juliereyc.com,Proxy,force-remote-dns
@@ -2703,6 +2722,7 @@ DOMAIN-SUFFIX,magic-net.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mahabodhi.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,my.mail.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,maiplus.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,maizhong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,manicur4ik.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,maplew.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,marc.info,Proxy,force-remote-dns
@@ -2735,6 +2755,7 @@ DOMAIN-SUFFIX,mcadforums.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mcfog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mcreasite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,md-t.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,media.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mediachinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mediafire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mediafreakcity.com,Proxy,force-remote-dns
@@ -2811,6 +2832,7 @@ DOMAIN-SUFFIX,minzhuzhongguo.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,miroguide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mirrorbooks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thecenter.mit.edu,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mitao.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mitbbs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mixero.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mixpod.com,Proxy,force-remote-dns
@@ -2889,6 +2911,7 @@ DOMAIN-SUFFIX,myeasytv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,myeclipseide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,myforum.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,myforum.com.uk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,myfreecams.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,myfreepaysite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,myfreshnet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,forum.mymaji.com,Proxy,force-remote-dns
@@ -2991,7 +3014,13 @@ DOMAIN-SUFFIX,niusnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,njactb.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,njuice.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nlfreevpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gooddns.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,maildns.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,no-ip.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,opendn.xyz,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sytes.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,whodns.xyz,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zapto.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobel.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobelprize.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobodycanstop.us,Proxy,force-remote-dns
@@ -3036,7 +3065,7 @@ DOMAIN-SUFFIX,nyti.ms,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytimes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,userapi.nytlog.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,nysingtao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cn.nytstyle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nzchinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nzchinese.net.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,observechina.net,Proxy,force-remote-dns
@@ -3069,7 +3098,7 @@ DOMAIN-SUFFIX,news.omy.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,showbiz.omy.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,on.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,onedrive.live.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,www.onion.city,Proxy,force-remote-dns
+DOMAIN-SUFFIX,onion.city,Proxy,force-remote-dns
 DOMAIN-SUFFIX,onlinecha.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,onlineyoutube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,onmoon.net,Proxy,force-remote-dns
@@ -3221,6 +3250,7 @@ DOMAIN-SUFFIX,plm.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,plunder.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,plus28.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,plusbb.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pmatehunter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pmates.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,po2b.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,podictionary.com,Proxy,force-remote-dns
@@ -3324,6 +3354,7 @@ DOMAIN-SUFFIX,putlocker.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pwned.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,python.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,python.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pythonhackers.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qanote.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qgirl.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qi-gong.me,Proxy,force-remote-dns
@@ -3575,6 +3606,7 @@ DOMAIN-SUFFIX,news.sinchew.com.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sinchew.com.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,singaporepools.com.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,singfortibet.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,singpao.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,singtao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.singtao.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sino-monthly.com,Proxy,force-remote-dns
@@ -3630,6 +3662,7 @@ DOMAIN-SUFFIX,so-ga.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,so-news.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,home.so-net.net.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,soc.mil,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sockscap64.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sockslist.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,socrec.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sod.co.jp,Proxy,force-remote-dns
@@ -3668,6 +3701,7 @@ DOMAIN-SUFFIX,soundofhope.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,soundofhope.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,soupofmedia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sourceforge.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nchc.dl.sourceforge.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sourcewadio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,southnews.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sowers.org.hk,Proxy,force-remote-dns
@@ -3687,6 +3721,7 @@ DOMAIN-SUFFIX,spring4u.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sproutcore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sproxy.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,squarespace.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,srocket.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssh91.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sspro.ml,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sss.camp,Proxy,force-remote-dns
@@ -3760,7 +3795,6 @@ DOMAIN-SUFFIX,sylfoundation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,syncback.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sysadmin1138.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sysresccd.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sytes.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.syx86.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.syx86.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,szbbs.net,Proxy,force-remote-dns
@@ -3863,6 +3897,7 @@ DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thelifeyoucansave.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thenewslens.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thepiratebay.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,theportalwiki.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thereallove.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,therock.net.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,thespeeder.com,Proxy,force-remote-dns
@@ -4069,6 +4104,7 @@ DOMAIN-SUFFIX,tunein.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tunnelbear.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.club,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tuo8.fit,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.ninja,Proxy,force-remote-dns
@@ -4349,9 +4385,11 @@ DOMAIN-SUFFIX,vpnaccount.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.vpncup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpncoupons.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vpndada.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnfan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnfire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnforgame.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vpnunlimitedapp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpngate.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpngate.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpngratis.net,Proxy,force-remote-dns
@@ -4446,6 +4484,7 @@ DOMAIN-SUFFIX,wezhiyong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wezone.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wforum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whatblocked.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wheatseeds.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wheelockslatin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whippedass.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whotalking.com,Proxy,force-remote-dns
@@ -4509,6 +4548,8 @@ DOMAIN-SUFFIX,wp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wow-life.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wowlegacy.ml,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wowporn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wowgirls.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woxinghuiguo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,woyaolian.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wpoforum.com,Proxy,force-remote-dns
@@ -4541,16 +4582,16 @@ DOMAIN-SUFFIX,xcafe.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xcity.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xcritic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xda-developers.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xerotica.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,destiny.xfiles.to,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xfm.pp.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xgmyd.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,xh4n.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xhamster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xianchawang.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xianjian.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xianqiao.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaochuncnjp.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,s.xiaod.in,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xiaod.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaohexie.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaolan.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xiaoma.org,Proxy,force-remote-dns
@@ -4582,6 +4623,7 @@ DOMAIN-SUFFIX,vlog.xuite.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xuzhiyong.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xuchao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xuchao.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,xvideo.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xvideos.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xvideos.es,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xxbbx.com,Proxy,force-remote-dns
