--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -236,7 +236,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-12-02 22:20:55
+// updated on 2016-12-10 18:31:51
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -378,6 +378,7 @@ DOMAIN-SUFFIX,china-mmm.jp.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lsxszzg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china-mmm.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china-mmm.sa.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,amazon.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,s3-ap-northeast-1.amazonaws.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,avmo.pw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,avmoo.com,Proxy,force-remote-dns
@@ -628,6 +629,7 @@ DOMAIN-SUFFIX,google.gg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.ie,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.is,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.it,Proxy,force-remote-dns
+DOMAIN-SUFFIX,google.jo,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.ms,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.nl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,google.nu,Proxy,force-remote-dns
@@ -864,7 +866,6 @@ DOMAIN-SUFFIX,alwaysdata.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alwaysdata.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alwaysvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,am730.com.hk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,amazon.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ameblo.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www1.american.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,americangreencard.com,Proxy,force-remote-dns
@@ -2625,6 +2626,7 @@ DOMAIN-SUFFIX,latelinenews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,latibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,le-vpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,leafyvpn.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,leeao.com.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lefora.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,left21.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,legalporno.com,Proxy,force-remote-dns
@@ -3066,6 +3068,7 @@ DOMAIN-SUFFIX,nyaa.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nydus.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nylon-angel.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nylonstockingsonline.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nytcn.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytco.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nyti.ms,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytimes.com,Proxy,force-remote-dns
@@ -3281,6 +3284,7 @@ DOMAIN-SUFFIX,pornmm.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornoxo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornrapidshare.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornsharing.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pornsocket.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pornstarclub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porntube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,porntubenews.com,Proxy,force-remote-dns
@@ -4768,6 +4772,7 @@ DOMAIN-SUFFIX,ziporn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zkaip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,realforum.zkiz.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zmw.cn,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zodgame.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zomobo.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zonaeuropa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zonghexinwen.com,Proxy,force-remote-dns
