--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -35,6 +35,9 @@ DOMAIN-KEYWORD,facebook,Proxy,force-remote-dns
 
 DOMAIN-KEYWORD,syndication,REJECT
 DOMAIN,afpssp.alimama.com,REJECT
+DOMAIN,ifzq.gtimg.cn,REJECT
+DOMAIN,sqt.gtimg.cn,REJECT
+DOMAIN,message.finance.qq.com,REJECT
 DOMAIN,csi.gstatic.com,REJECT
 DOMAIN,static.googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -227,8 +230,6 @@ DOMAIN,adcontrol.tudou.com,REJECT
 DOMAIN,adplay.tudou.com,REJECT
 DOMAIN,stat.tudou.com,REJECT
 DOMAIN,stats.tudou.com,REJECT
-DOMAIN,d.dropbox.com,REJECT
-DOMAIN,dl-debug.dropbox.com,REJECT
 DOMAIN,logger.instagram.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
@@ -236,7 +237,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-02-21 00:03:07
+// updated on 2017-02-24 13:29:52
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -3697,6 +3698,7 @@ DOMAIN-SUFFIX,sftuk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shadeyouvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shadow.ma,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shadowsky.xyz,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shadowsocks.asia,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.shadowsocks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shadowsocks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shadowsocks.org,Proxy,force-remote-dns
@@ -3864,12 +3866,12 @@ DOMAIN-SUFFIX,speakerdeck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spem.at,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spencertipping.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spicevpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,spideroak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spike.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spotflux.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spring4u.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sproutcore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sproxy.info,Proxy,force-remote-dns
-DOMAIN-SUFFIX,squarespace.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,srocket.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ss-link.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssh91.com,Proxy,force-remote-dns
@@ -3885,7 +3887,6 @@ DOMAIN-SUFFIX,statueofdemocracy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starfishfx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starp2p.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,startpage.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,state168.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,static-economist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stc.com.sa,Proxy,force-remote-dns
 DOMAIN-SUFFIX,steamcommunity.com,Proxy,force-remote-dns
