--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -237,7 +237,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-02-24 13:29:52
+// updated on 2017-03-07 14:53:48
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -251,7 +251,6 @@ DOMAIN-SUFFIX,arena.taipei,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianspiss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,athenaeizou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,azubu.tv,Proxy,force-remote-dns
-DOMAIN-SUFFIX,barracuda.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bloombergview.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boysmaster.com,Proxy,force-remote-dns
@@ -578,6 +577,9 @@ DOMAIN-SUFFIX,scieron.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,slyip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,slyip.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,suroot.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dyndns.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dyndns-pics.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,is-a-hunter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.br,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,facebook.design,Proxy,force-remote-dns
@@ -856,6 +858,7 @@ DOMAIN-SUFFIX,acevpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acg18.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acgkj.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,acnw.com.au,Proxy,force-remote-dns
+DOMAIN-SUFFIX,actfortibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,actimes.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,activpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,aculo.us,Proxy,force-remote-dns
@@ -1090,6 +1093,7 @@ DOMAIN-SUFFIX,bestvpnservice.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bestvpnusa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bet365.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,betfair.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,betternet.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bettervpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bettween.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,betvictor.com,Proxy,force-remote-dns
@@ -1395,6 +1399,7 @@ DOMAIN-SUFFIX,chuizi.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,christiantimes.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chrlawyers.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,churchinhongkong.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,chushigangdrug.ch,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cienen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cineastentreff.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cipfg.org,Proxy,force-remote-dns
@@ -1622,6 +1627,7 @@ DOMAIN-SUFFIX,dontmovetochina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dorjeshugden.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dotplane.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dotsub.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,doub.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dougscripts.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,douhokanko.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,doujincafe.com,Proxy,force-remote-dns
@@ -1630,8 +1636,6 @@ DOMAIN-SUFFIX,dphk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dpp.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dpr.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dragonsprings.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,draw.io,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dreammask.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drepung.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drgan.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,drmingxia.org,Proxy,force-remote-dns
@@ -1645,7 +1649,6 @@ DOMAIN-SUFFIX,dscn.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dstk.dk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtiblog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtic.mil,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dtiserv2.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dtwang.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duanzhihu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,duckdns.org,Proxy,force-remote-dns
@@ -1671,7 +1674,6 @@ DOMAIN-SUFFIX,dwnews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dwnews.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xys.dxiong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dynawebinc.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dyndns.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dzze.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,e-classical.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,e-gold.com,Proxy,force-remote-dns
@@ -1810,6 +1812,7 @@ DOMAIN-SUFFIX,falsefire.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falun-co.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunart.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunasia.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,falunau.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falundafa.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falundafa-dc.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falundafa-florida.org,Proxy,force-remote-dns
@@ -1896,6 +1899,7 @@ DOMAIN-SUFFIX,flagsonline.it,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fleshbot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fleursdeslettres.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flgg.us,Proxy,force-remote-dns
+DOMAIN-SUFFIX,flgjustice.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flickr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,staticflickr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flickrhivemind.net,Proxy,force-remote-dns
@@ -3729,6 +3733,7 @@ DOMAIN-SUFFIX,shixiao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shizhao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shkspr.mobi,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shodanhq.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shooshtime.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shop2000.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shopping.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,showhaotu.com,Proxy,force-remote-dns
@@ -3768,15 +3773,15 @@ DOMAIN-SUFFIX,sinonet.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sinopitt.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sinoants.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sinoquebec.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sierrafriendsoftibet.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sis.xxx,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sis001.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sis001.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,site90.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sitebro.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sitekreator.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,siteks.uk.to,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sitemaps.org,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sitetag.us,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sis.xxx,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sis001.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,sis001.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sjrt.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sjum.cn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sketchappsources.com,Proxy,force-remote-dns
@@ -3837,6 +3842,7 @@ DOMAIN-SUFFIX,soh.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sohfrance.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.soifind.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sokamonline.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,solidaritetibet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,somee.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,songjianjun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sonicbbs.cc,Proxy,force-remote-dns
@@ -4118,6 +4124,7 @@ DOMAIN-SUFFIX,tibetanpaintings.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanphotoproject.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanpoliticalreview.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanreview.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tibetansports.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanwomen.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanyouth.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanyouthcongress.org,Proxy,force-remote-dns
@@ -4575,6 +4582,7 @@ DOMAIN-SUFFIX,waffle1999.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wahas.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waigaobu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waikeung.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wailaike.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waiwaier.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wallornot.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wallpapercasa.com,Proxy,force-remote-dns
@@ -4706,7 +4714,10 @@ DOMAIN-SUFFIX,worldcat.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,worldjournal.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,worldvpn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wordpress.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cnbbnews.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chenshan20042005.wordpress.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,jobnewera.wordpress.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,sujiatun.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wow-life.net,Proxy,force-remote-dns
@@ -4802,6 +4813,7 @@ DOMAIN-SUFFIX,xysblogs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xyy69.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xyy69.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,page.bid.yahoo.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tw.bid.yahoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogs.yahoo.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,buy.yahoo.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hk.yahoo.com,Proxy,force-remote-dns
